# ring-span-lite

./: .tgitconfig  .travis.yml  BUCK  CHANGES.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-filter.cpp  02-no-exceptions.cpp  03-make-ring-span-cpp98.cpp  03-make-ring-span.cpp  04-clear.cpp  BUCK  CMakeLists.txt
include/nonstd/: ring.hpp  ring_span.hpp
project/CodeBlocks/: ring-span-lite.cbp  ring-span-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: BUCK  CMakeLists.txt  ring-span-lite.t.cpp  ring-span-lite.t.hpp  ring-span-main.t.cpp  ring-span-main.t.hpp  ring-span-sg14.t.hpp  ring-span.t.cpp  t-sg14.bat  t.bat  tc-cl.bat  tc.bat  tcl.bat  tg-sg14.bat  tg.bat
test/nonstd/: ring_span.tweak.hpp
